--- a/library.bib
+++ b/library.bib
@@ -11,6 +11,22 @@
   MRNUMBER = {4734965},
 }
 
+@book {deza-lauren,
+    AUTHOR = {Deza, M. and Laurent, M.},
+     TITLE = {Geometry of cuts and metrics},
+    SERIES = {Algorithms and Combinatorics},
+    VOLUME = {15},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {1997},
+     PAGES = {xii+587},
+      ISBN = {3-540-61611-X},
+   MRCLASS = {52-02 (05B30 05C12 51K05 52B12 52C07 68R05 90C28)},
+  MRNUMBER = {1460488},
+MRREVIEWER = {Alexander\ I.\ Barvinok},
+       DOI = {10.1007/978-3-642-04295-9},
+       URL = {https://doi.org/10.1007/978-3-642-04295-9},
+}
+
 @article {lebedeva-petrunin-2010,
     AUTHOR = {Lebedeva, N. and Petrunin, A.},
      TITLE = {Curvature bounded below: a definition a la {B}erg--{N}ikolaev},
@@ -25,6 +41,22 @@
 MRREVIEWER = {Koichi\ Nagano},
        DOI = {10.3934/era.2010.17.122},
        URL = {https://doi.org/10.3934/era.2010.17.122},
+}
+
+@article {lebedeva-petrunin2021,
+    AUTHOR = {Lebedeva, Nina and Petrunin, Anton},
+     TITLE = {5-point {CAT(0)} spaces after {T}etsu {T}oyoda},
+   JOURNAL = {Anal. Geom. Metr. Spaces},
+  FJOURNAL = {Analysis and Geometry in Metric Spaces},
+    VOLUME = {9},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {160--166},
+      ISSN = {2299-3274},
+   MRCLASS = {53C23 (51F99)},
+  MRNUMBER = {4298102},
+       DOI = {10.1515/agms-2020-0126},
+       URL = {https://doi.org/10.1515/agms-2020-0126},
 }
 
 @article {lebedeva-petrunin-2024,
@@ -57,6 +89,20 @@ MRREVIEWER = {Koichi\ Nagano},
 MRREVIEWER = {Zhongmin Shen},
        DOI = {10.1007/s000390050018},
        URL = {https://doi.org/10.1007/s000390050018},
+}
+
+@book {petrunin2023,
+    AUTHOR = {Petrunin, Anton},
+     TITLE = {Pure metric geometry},
+    SERIES = {SpringerBriefs in Mathematics},
+% PUBLISHER = {Springer, Cham},
+      YEAR = {2023},
+    % PAGES = {viii+103},
+      ISBN = {978-3-031-39161-3; 978-3-031-39162-0},
+   MRCLASS = {54-01 (51Fxx 54Cxx 54Exx)},
+  MRNUMBER = {4696672},
+       DOI = {10.1007/978-3-031-39162-0},
+       URL = {https://doi.org/10.1007/978-3-031-39162-0},
 }
 
 @article {sato,
