--- a/4-point.tex
+++ b/4-point.tex
@@ -178,13 +178,13 @@ In fact the triangle inequality is equivalent to all inequalities of negative ty
 
 Consider a rank-one inequality $\rho_{\bm{x}}(v)\ge 0$; we may assume that $v$ is a unit vector.
 Furthermore, we may assume that it lies in a closed hemisphere bounded by an equator in direction of one of the the facets of $\triangle$.
-The equators divide the hemisphere into triangles and quadrangles.
+These equators divide the hemisphere into triangles and quadrangles.
 The inequality $\rho_{\bm{x}}(v)\ge 0$ has negative type $(2,2)$ or $(3,1)$
 if and only if $v$ lies in the interior of a triangle or a quadrangle, respectfully.
 
 \begin{wrapfigure}{o}{36mm}
 \centering
-\vskip-0mm
+\vskip-4mm
 \includegraphics{mppics/pic-20}
 \vskip-0mm
 \end{wrapfigure}
@@ -267,17 +267,15 @@ The diagram shows that after relabeling, we can assume that
 In any case, the array is embeddable in $r\cdot \mathbb{S}^1$, where $r=|x_1-x_4|/\pi$.
 \qeds
 
-Following the convention from \cite{lebedeva-petrunin-2010},
-the equalities at the end of the proof can be encoded by the first three diagrams;
+The following picture shows possible positions of the set $N$.
 \begin{figure}[h!]
 \centering
 \vskip-0mm
 \includegraphics{mppics/pic-30}
 \vskip-0mm
 \end{figure}
-if three labels, say $x_1$, $x_2$, and $x_3$, uppear in this order on a smooth line, then it means that \[|x_1-x_2|+|x_2-x_3|=|x_1-x_3|.\]
-The last diagram says that the array is isometric to an array on the real line.
-From the proof one should see that this classifies all extremal rays of the convex cone of all forms associated to 4-point arrays in metric spaces.
+Below it we draw a diagram following the convention from \cite{lebedeva-petrunin-2010};
+if three points, say $x_1$, $x_2$, and $x_3$, uppear in this order on a smooth line, then $|x_1-x_2|+|x_2-x_3|=|x_1-x_3|$.
 
 
 \paragraph{Alexandrov's comparison.}
@@ -429,10 +427,9 @@ and this is equivalent to the point-on-side comparison for nonpositive curvature
 
 \paragraph{Globalization.}
 Suppose $K\subset W$ is closed convex cone.
-We say that a metric space $X$ is said to meet local $K$-comparison if any point $x\in X$ admits a neighborhood $U$ such that $K$-comparison for any $n$-point array in $U$.
+We say that a metric space $X$ meets \emph{local $K$-comparison} if any point $x\in X$ admits a neighborhood $U$ such that $K$-comparison for any $n$-point array in $U$.
 
-Suppose local $K$-comparison implies $K$-comparison for any length space.
-Then we say that \emph{globalization holds} for the $K$-comparison.
+If local $K$-comparison implies $K$-comparison for any length space, then we say that \emph{globalization holds} for the $K$-comparison.
 
 \begin{thm}{Theorem}
 Suppose that globalization holds for the $K$-comparison for for some closed cone $K\subset W=\RR^3$.
@@ -446,8 +443,8 @@ In the assumption of the theorem, $\mathcal{M}_K$ contains all Alexandrov spaces
 \parit{Proof.}
 Suppose $K\ne\{0\}$.
 By the proposition in § \ref{Associated form}, $\mathcal{M}_K$ contrains real line.
-Therefore, local $K$-comparison holds for any circle $r\cdot \mathbb{S}^1$, and therefore for the prduct space $r\cdot \mathbb{S}^1\times\RR^3$ for any $r>0$.
-It remains to apply the proposition in~\ref{Four-point arrays}.
+Therefore, local $K$-comparison holds for any circle $r\cdot \mathbb{S}^1$, and any prduct space $r\cdot \mathbb{S}^1\times\RR^3$ for any $r>0$.
+It remains to apply the proposition in §~\ref{Four-point arrays}.
 \qeds
 
 \parit{Proof of the theorem.}
