--- a/library.bib
+++ b/library.bib
@@ -74,6 +74,23 @@ MRREVIEWER = {Koichi\ Nagano},
        URL = {https://doi.org/10.1093/imrn/rnad027},
 }
 
+@article {lebedeva-petrunin-zolotov,
+    AUTHOR = {Lebedeva, N. and Petrunin, A. and Zolotov, V.},
+     TITLE = {Bipolar comparison},
+   JOURNAL = {Geom. Funct. Anal.},
+  FJOURNAL = {Geometric and Functional Analysis},
+    VOLUME = {29},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {258--282},
+      ISSN = {1016-443X,1420-8970},
+   MRCLASS = {53C23},
+  MRNUMBER = {3925110},
+MRREVIEWER = {Nan\ Li},
+       DOI = {10.1007/s00039-019-00481-9},
+       URL = {https://doi.org/10.1007/s00039-019-00481-9},
+}
+
 @article {lang-schroeder,
     AUTHOR = {Lang, U. and Schroeder, V.},
      TITLE = {Kirszbraun's theorem and metric spaces of bounded curvature},
