--- a/library.bib
+++ b/library.bib
@@ -122,6 +122,13 @@ MRREVIEWER = {Zhongmin Shen},
        URL = {https://doi.org/10.1007/978-3-031-39162-0},
 }
 
+@phdthesis{sahovic2009,
+  title={Approximations of Riemannian Manifolds with Linear Curvature Constraints},
+  author={Šahović, Vedrin},
+  school={University of Münster},
+  year={2009}
+}
+
 @article {sato,
     AUTHOR = {Sato, T.},
      TITLE = {An alternative proof of {B}erg and {N}ikolaev's
