--- a/library.bib
+++ b/library.bib
@@ -123,7 +123,7 @@ MRREVIEWER = {Zhongmin Shen},
 }
 
 @phdthesis{sahovic2009,
-  title={Approximations of Riemannian Manifolds with Linear Curvature Constraints},
+  title={Approximations of {R}iemannian manifolds with linear curvature constraints},
   author={Šahović, Vedrin},
   school={University of Münster},
   year={2009}
@@ -178,3 +178,13 @@ MRREVIEWER = {Igor Belegradek},
        DOI = {10.1515/agms-2020-0111},
        URL = {https://doi.org/10.1515/agms-2020-0111},
 }
+
+@article{wald,
+	author = {Wald, A.},
+	hyphenation = {german},
+	journal = {Ergebnisse eines mathematischen Kolloquium},
+	language = {german},
+	pages = {24--46},
+	title = {Begr\"undung eiiner Koordinatenlosen Differentialgeometrie der Fl\"achen},
+	volume = {6},
+	year = {1935}}
