--- a/paper-en.sty
+++ b/paper-en.sty
@@ -82,7 +82,7 @@ isbn=false]{biblatex}
 \def\Cone{\operatorname{\rm Cone}}
 \def\Conv{\text{\rm Conv}}
 \def\Const{\text{\rm Const}}
-\newcommand*{\angk}[4]{\tilde\measuredangle^{#1}(#2\,{}^{#3}_{#4}\hspace{-0.2ex})}
+\newcommand*{\angk}[3]{\tilde\measuredangle(#1\,{}^{#2}_{#3}\hspace{-0.2ex})}
 \def\area{\operatorname{\rm area}}
 \def\vol{\operatorname{\rm vol}}
 \def\diam{\operatorname{\rm diam}}
